Build: Update IAR cmake files, fix Windows build errors
Fixed regex issue in toolchain_IARARM.cmake, causing Windows build errors

Moved --map option from toolchain file to CMakeLists.txt files, like
for ARMClang and GNUARM

Removed dead code from toolchain_IARARM.cmake

Renamed IAR RTX libraries in CMakeLists.txt

Signed-off-by: TTornblom <thomas.tornblom@iar.com>
Change-Id: I01805f59a5be0ca4cd2bf47f20dd4a8852c1ea54

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -58,6 +58,7 @@ target_link_options(tfm_s
         --entry=Reset_Handler
         $<$<C_COMPILER_ID:GNU>:-Wl,-Map=${CMAKE_BINARY_DIR}/bin/tfm_s.map>
         $<$<C_COMPILER_ID:ARMClang>:--map>
+        $<$<C_COMPILER_ID:IAR>:--map\;${CMAKE_BINARY_DIR}/bin/tfm_s.map>
 )
 
 add_convert_to_bin_target(tfm_s)
