Stack_seal_mitigation: Seal the PSP stacks for Library mode.
This patch does the changes for sealing the PSP stacks used
in library mode. There are 2 stacks used as PSP in Library mode :
ARM_LIB_STACK and TFM_SECURE_STACK. In case of ARM_LIB_STACK,
a new section is created for sealing the stack. The TFM_SECURE_STACK
needs more careful manipulation as the top of stack is used for iovec
parameters. So the code inserts a stack seal between the iovec
parameters and Partition stack area.

Signed-off-by: Soby Mathew <soby.mathew@arm.com>
Change-Id: I028c625e53a8bb1677a7f3001095ab3452f82c32

--- a/platform/ext/common/iar/tfm_common_s.icf.template
+++ b/platform/ext/common/iar/tfm_common_s.icf.template
@@ -116,7 +116,13 @@ define block ARM_LIB_STACK_MSP with alignment = 32, size = S_MSP_STACK_SIZE { };
 define overlay STACK_DATA {block TFM_SHARED_DATA};
 define overlay STACK_DATA {block ARM_LIB_STACK_MSP};
 
+# if !defined(TFM_PSA_API)
+    /* Reserve space for stack seal (8 bytes) */
+define block ARM_LIB_STACK with alignment = 32, size = S_PSP_STACK_SIZE - 0x8 { };
+define block ARM_LIB_STACK_SEAL with size = 0x8 { };
+# else
 define block ARM_LIB_STACK with alignment = 32, size = S_PSP_STACK_SIZE { };
+# endif
 #endif
 
 #if !defined(TFM_PSA_API)
@@ -326,6 +332,10 @@ define block DATA with fixed order {
     overlay STACK_DATA,
     /* PSP is unprivileged in single-core topology */
     block ARM_LIB_STACK,
+# if !defined(TFM_PSA_API)
+    /* Define stack seal block for Library mode */
+    block ARM_LIB_STACK_SEAL,
+# endif
 #endif
 
 #if !defined(TFM_PSA_API)
