--- a/lib/ext/CMakeLists.txt
+++ b/lib/ext/CMakeLists.txt
@@ -10,7 +10,9 @@ add_subdirectory(qcbor)
 add_subdirectory(t_cose)
 add_subdirectory(mbedcrypto)
 add_subdirectory(tf-m-tests)
-add_subdirectory(mcuboot)
+if(BL2)
+    add_subdirectory(mcuboot)
+endif()
 if(TEST_PSA_API)
     add_subdirectory(psa_arch_tests)
 endif()
