Build: Fix CC312 init skip issue on Musca-B1/S1
Accidentally the initialization of CC312 crypto accelerator
was skipped on Musca boards. Therefore at execution the
CPU stuck in an infinite loop.

Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Change-Id: I29e8c8b1ace300a7d44efb1dcd1ffe86e1becb21

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 target_compile_definitions(platform_bl2
     PRIVATE
         $<$<STREQUAL:${CRYPTO_HW_ACCELERATOR_OTP_STATE},ENABLED>:CRYPTO_HW_ACCELERATOR_OTP_ENABLED>
+        CRYPTO_HW_ACCELERATOR
 )
 
 ################################ BL2 ###########################################
