--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -306,6 +306,12 @@ LR_CODE S_CODE_START {
     TFM_PSA_RW_STACK_END +0 ALIGN 32 EMPTY 0x0 {
     }
 
+#ifdef RAM_VECTORS_SUPPORT
+    ER_RAM_VECTORS +0 ALIGN 256 UNINIT {
+        * (RESET_RAM)
+    }
+#endif
+
 #if defined (S_RAM_CODE_START)
     /* Executable code allocated in RAM */
     TFM_RAM_CODE S_RAM_CODE_START {
