Build: Improve handling of CMSIS RTX lib
Also add necessary platform files for the core testsuite

Change-Id: Ibfa4ba5f8c0beeca1f333f5be87c8ce8a0910ec9
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/lib/ext/CMakeLists.txt
+++ b/lib/ext/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(qcbor)
 add_subdirectory(t_cose)
 add_subdirectory(mbedcrypto)
 add_subdirectory(tf-m-tests)
+add_subdirectory(CMSIS_5)
 if(BL2)
     add_subdirectory(mcuboot)
 endif()
