--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -85,6 +85,7 @@ target_sources(platform_ns
 target_link_libraries(platform_ns
     PUBLIC
         platform_region_defs
+        psa_interface
 )
 
 #========================= Platform BL2 =======================================#
