Build: Add config for PSA API tests
The PSA API tests need some of the default config
to be overridden. Add capability to specify override
parameters for PSA API tests via a separate and
dedicated config file.

Signed-off-by: Soby Mathew <soby.mathew@arm.com>
Change-Id: Ifb4679a5b638f87233df7351a7aabfde64cc36de

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,11 @@ if (EXISTS ${CMAKE_SOURCE_DIR}/config/build_type/${CMAKE_BUILD_TYPE_LOWERCASE}.c
     include(${CMAKE_SOURCE_DIR}/config/build_type/${CMAKE_BUILD_TYPE_LOWERCASE}.cmake)
 endif()
 
+# If configured for tests, load config specific to tests overriding defaults.
+if (TEST_PSA_API)
+    include(config/tests/config_test_psa_api.cmake)
+endif()
+
 # Then load the profile, overriding build type config, defaults and command
 # line.
 if (TFM_PROFILE)
