trusted-firmware-m: pass toolchain prefix & path to GCC toolchain
Allow the toolchain path and prefix to be passed via CMake
as user configuration to the GNU ARM Embedded toolchain
configuration file

Signed-off-by: Ioannis Glaropoulos <Ioannis.Glaropoulos@nordicsemi.no>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,8 @@ function(trusted_firmware_build)
                ${TFM_ISOLATION_LEVEL_ARG}
                ${TFM_REGRESSION_ARG}
                -DTFM_TEST_REPO_PATH=${ZEPHYR_TFM_MODULE_DIR}/tf-m-tests
+               -DTFM_TOOLCHAIN_PATH=${TFM_TOOLCHAIN_PATH}
+               -DTFM_TOOLCHAIN_PREFIX=${TFM_TOOLCHAIN_PREFIX}
     BUILD_ALWAYS True
     USES_TERMINAL_BUILD True
     BUILD_BYPRODUCTS ${VENEERS_FILE} ${PSA_API_NS_PATH}
