--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ function(trusted_firmware_build)
   endif()
 
   include(ExternalProject)
-  
+
   ExternalProject_Add(
     tfm
     SOURCE_DIR ${ZEPHYR_TFM_MODULE_DIR}/trusted-firmware-m
@@ -108,8 +108,8 @@ function(trusted_firmware_build)
     BUILD_BYPRODUCTS ${BUILD_BYPRODUCTS}
   )
 
-  add_library(tfm_api STATIC IMPORTED)
-  set_target_properties(tfm_api PROPERTIES
+  add_library(interface_lib STATIC IMPORTED)
+  set_target_properties(interface_lib PROPERTIES
     IMPORTED_LOCATION ${PSA_API_NS_PATH}
   )
 
@@ -118,13 +118,25 @@ function(trusted_firmware_build)
     IMPORTED_LOCATION ${VENEERS_FILE}
   )
 
-  add_dependencies(tfm_api tfm)
+  add_dependencies(interface_lib tfm)
   file(MAKE_DIRECTORY ${TFM_BINARY_DIR}/generated/interface/include)
-  target_include_directories(tfm_api INTERFACE
+
+  add_library(tfm_api ${ZEPHYR_TFM_MODULE_DIR}/tf-m-tests/app/os_wrapper_cmsis_rtos_v2.c)
+
+  target_include_directories(tfm_api
+    PRIVATE
+    ${ZEPHYR_TFM_MODULE_DIR}/tf-m-tests/CMSIS/RTOS2/Include
+    PUBLIC
     ${ZEPHYR_TFM_MODULE_DIR}/trusted-firmware-m/interface/include
+    INTERFACE
     ${TFM_BINARY_DIR}/generated/interface/include
   )
+  add_dependencies(tfm_api tfm)
 
-  target_link_libraries(tfm_api INTERFACE zephyr_interface veneer_lib)
+  target_link_libraries(interface_lib INTERFACE tfm_api)
+
+  target_link_libraries(tfm_api PUBLIC zephyr_interface interface_lib veneer_lib)
 
 endfunction()
+
+
