Platform: Add TEST_PSA_API config to compile def
This patch adds the value of TEST_PSA_API config to the
compile definitions. This enables the platform to configure
appropriately for the tests.

Signed-off-by: Soby Mathew <soby.mathew@arm.com>
Change-Id: If50b09eba78e273c04f8450a2177cbacfb324162

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -155,4 +155,5 @@ target_compile_definitions(platform_region_defs
         DAUTH_${DEBUG_AUTHENTICATION}
         $<$<BOOL:${BL2}>:MCUBOOT_IMAGE_NUMBER=${MCUBOOT_IMAGE_NUMBER}>
         $<$<STREQUAL:${MCUBOOT_EXECUTION_SLOT},2>:LINK_TO_SECONDARY_PARTITION>
+        $<$<BOOL:${TEST_PSA_API}>:PSA_API_TEST_${TEST_PSA_API}>
 )
