Build: Update windows build settings
The regex for converting relative path into the absolute path doesn't
care windows absolute format, which would fail the windows build if
users assign an out-of-tree 'TFM_TEST_REPO_PATH'. Check the windows
absolute path by checking the second character is ':' or not.

Change-Id: I48539a3ae0fe11ac7b638ca39ca82249ed9c7016
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -47,15 +47,15 @@ endfunction()
 
 parse_field_from_yaml("${GENERATED_FILE_LISTS}" template TEMPLATE_FILES)
 # Replace relative paths with absolute paths
-list(TRANSFORM TEMPLATE_FILES REPLACE "^([^/\\].*)" "${CMAKE_SOURCE_DIR}/\\1")
+list(TRANSFORM TEMPLATE_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_SOURCE_DIR}/\\1")
 
 parse_field_from_yaml("${GENERATED_FILE_LISTS}" output OUTPUT_FILES)
 # Replace relative paths with absolute paths
-list(TRANSFORM OUTPUT_FILES REPLACE "^([^/\\].*)" "${CMAKE_BINARY_DIR}/generated/\\1")
+list(TRANSFORM OUTPUT_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_BINARY_DIR}/generated/\\1")
 
 parse_field_from_yaml("${MANIFEST_LISTS}" manifest MANIFEST_FILES)
 # Replace relative paths with absolute paths
-list(TRANSFORM MANIFEST_FILES REPLACE "^([^/\\].*)" "${CMAKE_SOURCE_DIR}/\\1")
+list(TRANSFORM MANIFEST_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_SOURCE_DIR}/\\1")
 
 ############################### Command declaration ############################
 
