Build: Improve configuration of IRQ tests
Also PERIPH_ACCCESS tests. Update docs.

Change-Id: I61274f9a067a2de7d45ffebedb81dd06d999600d
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -88,6 +88,12 @@ target_link_libraries(platform_ns
         psa_interface
 )
 
+target_compile_definitions(platform_ns
+    PRIVATE
+        $<$<BOOL:${TFM_IRQ_TEST}>:TFM_ENABLE_IRQ_TEST>
+        $<$<BOOL:${TFM_PERIPH_ACCESS_TEST}>:TFM_ENABLE_PERIPH_ACCESS_TEST>
+)
+
 #========================= Platform BL2 =======================================#
 if(BL2)
     #TODO import policy
